# Integration-calculator

./: CMakeLists.txt  CODE_OF_CONDUCT.md  README.md  im_text.c  im_text.h  main.c  menu_choice.c  menu_choice.h  test_rpn.c  test_rpn.h  user_menu.c  user_menu.h
.github/workflows/: c-cpp.yml
include/: im_text.h  text_data.h  user_menu.h
src/: im_text.c  menu_choice.c  test_rpn.c  user_menu.c
